--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "vue": "^3.3.2",
-    "vue-router": "^4.2.0"
+    "vue-router": "^4.2.0",
+    "axios": "1.4.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
