--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/mysql": "2.15.21",
     "@types/node": "^20.2.5",
     "concurrently": "^7.6.0",
     "typescript": "^5.1.3",
